<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.learn2develop.myactionbar.MyActionBarActivity" >

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        />
    
    <item 
        android:id="@+id/action_find"
        android:title="@string/action_find"
        android:orderInCategory="50"
        android:showAsAction="ifRoom"
        />
    
    <item 
        android:id="@+id/action_back"
        android:title="@string/action_back"
        android:orderInCategory="30"
        android:showAsAction="ifRoom"
        />
    
    <item 
        android:id="@+id/action_new"
        android:title="@string/action_new"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        />

</menu>
